# sayonara

./: .dockerignore  Dockerfile  README.md
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  docker.yml  security.yml
core/: .gitignore  .tarpaulin.toml  Cargo.toml  PHASE_A2_COMPLETION_REPORT.md  TESTING.md  codecov.yml  coverage_baseline.md  deny.toml
core/benches/: adaptive_tuning.rs  buffer_pool.rs  latency.rs  scaling.rs  throughput.rs
core/scripts/: build_release.sh  check_performance_regression.sh  ci_test.sh  generate_coverage_report.sh  install_dependencies.sh  setup_test_environment.sh
core/src/: lib.rs  lib_tests.rs  main.rs  wipe_orchestrator.rs
core/src/algorithms/: dod.rs  dod_test.rs  functional_tests.rs  gutmann.rs  gutmann_test.rs  mod.rs  random.rs  random_test.rs  zero.rs
core/src/crypto/: certificates.rs  mod.rs  secure_rng.rs  secure_rng_tests.rs
core/src/drives/: detection.rs  detection_tests.rs  integrated_wipe.rs  integrated_wipe_tests.rs  mod.rs
core/src/drives/freeze/: advanced.rs  basic.rs  detection.rs  mod.rs  tests.rs
core/src/drives/freeze/strategies/: kernel_module.rs  mod.rs  remaining_impl.rs  sata_link_reset.rs  vendor_specific.rs
core/src/drives/operations/: hpa_dco.rs  hpa_dco_tests.rs  mod.rs  sed.rs  smart.rs  smart_tests.rs  trim.rs  trim_tests.rs
core/src/drives/types/: emmc.rs  hdd.rs  hybrid.rs  mod.rs  optane.rs  raid.rs  smr.rs  ssd.rs
core/src/drives/types/nvme/: advanced.rs  basic.rs  mod.rs
core/src/error/: checkpoint.rs  classification.rs  mod.rs  recovery_coordinator.rs  retry.rs
core/src/error/mechanisms/: alternative_io.rs  bad_sector.rs  degraded_mode.rs  mod.rs  self_heal.rs
core/src/io/: buffer_pool.rs  io_uring_engine.rs  metrics.rs  mmap_engine.rs  mod.rs  optimized_engine.rs  platform_specific.rs  tests.rs
core/src/ui/: mod.rs  progress.rs  progress_tests.rs
core/src/verification/: enhanced.rs  enhanced_tests.rs  mod.rs  recovery_test.rs
core/src/wipe_orchestrator/: wipe_orchestrator_tests.rs
core/tests/: basic_wipe.rs  compliance.rs  hardware_integration.rs  integration_checkpoint_resume.rs  integration_recovery_mechanisms.rs
core/tests/common/: assertions.rs  mock_commands.rs  mock_drive.rs  mock_drive_builders.rs  mock_drive_v2.rs  mod.rs  test_helpers.rs
core/tests/compliance/: certificate_validation.rs  dod_5220_22m.rs  mod.rs  nist_800_88.rs  statistical_suite.rs
core/tests/integration/: drive_detection_tests.rs  hpa_dco_tests.rs  mod.rs  wipe_orchestrator_tests.rs
docker/: test.Dockerfile
