[package]
name = "sayonara-wipe"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Advanced secure data wiping tool with comprehensive hardware support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/sayonara-wipe"
keywords = ["security", "data-wipe", "disk", "secure-erase", "privacy"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "env", "unicode"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cryptography and security
rand = "0.8"
sha2 = "0.10"
ring = "0.17"
x509-parser = "0.15"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# System interaction
libc = "0.2"
nix = { version = "0.27", features = ["fs", "process", "signal"] }

# Signal handling
signal-hook = "0.3"

# Logging
env_logger = "0.11"
log = "0.4"

# Progress indication
indicatif = "0.17"
console = "0.15"

# Terminal colors
colored = "2.1"
termcolor = "1.4"

# Configuration
config = "0.13"
directories = "5.0"

# Testing utilities
tempfile = "3.8"
lazy_static = "1.5.0"

# NEW: Step 3 Dependencies
# Regex for parsing controller paths
regex = "1.10"

# CPU core count for parallel operations
num_cpus = "1.16"

# Database for checkpoint storage (SQLite)
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }

# Tracing for structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "time"] }
tracing-appender = "0.2"

# System information
sysinfo = "0.30"

# Process management
procfs = "0.16"

# Glob pattern matching
glob = "0.3"

# Humantime formatting
humantime = "2.1"

[dev-dependencies]
ctor = "0.2"
criterion = "0.5"
mockall = "0.12"
proptest = "1.4"
test-case = "3.1"
serial_test = "3.0"

# NEW: Testing with actual hardware simulation
mock_instant = "0.3"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2
debug = true

[[bin]]
name = "sayonara"
path = "src/main.rs"

[features]
default = ["progress-bars", "color-output"]
progress-bars = []
color-output = []
experimental = []
debug-mode = []
# NEW: Integration tests feature
integration-tests = []
# NEW: Kernel module building
kernel-module = []

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"
io-uring = "0.6"
memmap2 = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "handleapi", "ioapiset", "winioctl", "winnt"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
IOKit-sys = "0.1.5"

# Build script for kernel module
[build-dependencies]
cc = "1.0"
